--- a/sitios_web/fromsoftware.html
+++ b/sitios_web/fromsoftware.html
@@ -41,5 +41,7 @@
                 </section>                
             </div>
         </div>
+        <script src="../javascript/main.js"></script>
     </body>
 </html>
+
